<resources>
    <string name="app_name">RateYourClass</string>

    <string name="hint">Comments and Suggestions</string>
    <string name="sign_out">Sign Out</string>
    <string name="link_to_register">Not a member? Get Registered now!</string>
    <string name="forgot_password">Forgot Password? Tap here.</string>
    <string name="btn_login">LOGIN</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_login">Already registered. Login Here!</string>

    <!--Profile Activity -->
    <string name="label_profile">User Info</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_rollno">Roll Number</string>
    <string name="btn_submit">Submit</string>

    <!--Rating Strings-->
    <string name="oneStar">Hated it</string>
    <string name="twoStar">Disliked it</string>
    <string name="threeStar">It\'s OK</string>
    <string name="fourStar">Liked it</string>
    <string name="fiveStar">Loved it</string>


    <string name="title_activity_class_schedule">ClassScheduleActivity</string>
    <string name="tab_text_1">Mon</string>
    <string name="tab_text_2">Tue</string>
    <string name="tab_text_3">Wed</string>
    <string name="tab_text_4">Thu</string>
    <string name="tab_text_5">Fri</string>
    <string name="tab_text_6">Sat</string>
    <string name="tab_text_7">Sun</string>
    <string name="action_settings">Settings</string>

    <string name="text_delete">Delete</string>
    <string name="text_edit">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
